Finished Layout, switched gallery images to cards, added footer, added tasteful margin to bottom of main content, removed search function, removed textarea overflow bug

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav.navbar a.navbar-brand:focus{
     background-color: white;
     padding: 15px;
     box-shadow: 3px 3px #B3B3B2;
+    margin-bottom: 50px;
 }
 
 img{
@@ -77,6 +78,10 @@ input[type=text], select, textarea{
     border-bottom: 2px solid #F06449;  
     outline: none;
     resize: none;
+}
+
+textarea{
+    width: 90%;
 }
 
 input[type=text]:focus, select:focus, textarea:focus{
@@ -134,4 +139,34 @@ div.gallery{
 
 a:hover{
     text-decoration: none;
+}
+
+.card{
+    margin-bottom: 15px;
+}
+
+footer{
+    text-align: center;
+    background-color: white;
+    position: fixed;
+    bottom: 0px;
+    width: 100%;
+    box-shadow:  0px -3px #B3B3B2;
+}
+
+.footer{
+    width: 400px;
+    margin: auto;
+    color: white;
+    background-color: #F06449;
+    box-shadow: 0px -3px #C5523C;
+}
+
+/* These pieces of code hide the scrollbar, taken from Stack Overflow, 
+here: https://stackoverflow.com/questions/16670931/hide-scroll-bar-but-while-still-being-able-to-scroll */
+
+::-webkit-scrollbar {
+    width: 0px;  /* remove scrollbar space */
+    height: 0px;
+    background: transparent;  /* optional: just make scrollbar invisible */
 }
